Fixes the text HOW IT WORKS not to overflow in the mobile screens

--- a/styles/responsiveness.css
+++ b/styles/responsiveness.css
@@ -41,6 +41,18 @@
   }
 }
 
+@media screen and (max-width: 706px) {
+  .out-side-btn {
+    width: 44%;
+  }
+}
+
+@media screen and (max-width: 501px) {
+  .out-side-btn {
+    width: 67%;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .h3-rento {
     display: block;
